# VizzBreeze

./: .gitignore  1. sample_data_unaggregated.xlsx  2. sample_data_unaggregated.xlsx  README.md  desktop.ini  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/vizzbreeze/: __init__.py  app.py  cli.py
